# graphify

./: .gitignore  .graphifyignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIGURING_V1_5.md  MIGRATION_V1_8.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  SECURITY.md  profile-example-complete.yaml  profile-example.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.10-MILESTONE-AUDIT.md  v1.11-MILESTONE-AUDIT.md  v1.13-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md  v1.8-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: vault-cwd-gate-argparse-required.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.html  graph.json
.planning/metrics/: historical-baselines.md
.planning/milestones/: RETROSPECTIVE.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.10-MILESTONE-AUDIT.md  v1.10-REQUIREMENTS.md  v1.11-REQUIREMENTS.md  v1.12-MILESTONE-AUDIT.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.12-VALIDATION.md  v1.13-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  (+6 more)
docs/: ARCHITECTURE.md  CONFIGURING_V1_5-RUNBOOK.md  CONFIGURING_V1_5.md  ELICITATION.md  INSTALLATION.md  LS-VAULT-UPDATE-GUIDE.md  MIGRATION_V1_8.md  PROFILE-CONFIGURATION.md  RELATIONS.md  TEMPLATES.md
graphify/: __init__.py  __main__.py  analyze.py  argue.py  augment.py  batch.py  build.py  cache.py  capability.py  capability_manifest.schema.json  capability_tool_meta.yaml  cluster.py  corpus_prune.py  dedup.py  delta.py  detect.py  doctor.py  drift.py  elicit.py  enrich.py  excalidraw.py  export.py  extract.py  federate.py  harness_export.py  harness_import.py  harness_interchange.py  hooks.py  ingest.py  mapping.py  mcp_tool_registry.py  merge.py  migration.py  naming.py  output.py  pipeline.py  profile.py  prompts.py  report.py  reverse_sync.py  (+27 more)
scripts/: audit_b_closure.py  bump_version.py  dedup_spike.py  ls-vault-update.sh  sync_mcp_server_json.py
tests/: EVAL_mixed_corpus.md  conftest.py  eval_attention.py  test_analyze.py  test_approve.py  test_argue.py  test_audit_b_closure.py  test_augment.py  test_auto_on_run.py  test_batch.py  test_build.py  test_cache.py  test_capability.py  test_cli_run.py  test_cluster.py  test_commands.py  test_concept_code_edges.py  test_concept_code_hops.py  test_concept_code_mcp.py  test_concept_code_obsidian.py  test_confidence_cache.py  test_dedup.py  test_dedup_pipeline.py  test_dedup_spike.py  test_delta.py  test_denylist.py  test_detect.py  test_docs.py  test_docs_precedence_invariant.py  test_docs_templates_examples.py  test_doctor.py  test_drift.py  test_e2e_integration.py  test_elicit.py  test_enrich.py  test_enrich_grep_guard.py  test_enrich_invariant.py  test_enrichment_lifecycle.py  test_excalidraw_layout.py  test_explain_paths.py  (+53 more)
(+1243 files in other folders)
